--- a/style.css
+++ b/style.css
@@ -3,13 +3,29 @@
   padding: 0;
   box-sizing: border-box;
   color: #6c6b6b;
+}
+a {
   text-decoration: none;
+}
+header, nav, h2, .main-visual, footer {
+  font-family: Chalkduster, "Bledley Hand", Courier, "Segoe Print", sans-serif;
 }
 header {
    width: 90%;
   padding: 15px 0;
   margin: 0 auto;
   text-align: center;
+  position: relative;
+}
+.social i {
+  display: inline-block;
+  margin-left: 20px;
+  
+}
+.social {
+  position: absolute;
+  top: 22px;
+  right: 22px;
 }
 header .heading {
   font-size: 32px;
@@ -176,4 +192,75 @@ footer {
 }
 .footer-text {
   color: #fff;
+}
+.social i {
+  color:black;
+}
+@media screen and (max-width: 425px) {
+  header {
+    width: 100%;
+  }
+
+  .nav-list {
+    width: 100%;
+  }
+
+  .nav-list-item {
+    width: 100%;
+    margin: 0 0 10px 0;
+  }
+
+  .social {
+    display: none;
+  }
+
+  .main-visual-content {
+    width: 100%;
+  }
+
+  main {
+    width: 100%;
+    display: block;
+  }
+
+  .blog {
+    width: 100%;
+    margin: 0;
+  }
+
+  .blog-box {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+
+  .blog-image {
+    width: 49%;
+  }
+
+  .blog-text {
+    width: 49%;
+    padding-top: 5px;
+  }
+
+  .sidebar {
+    width: 100%;
+  }
+
+  .sidebar-contents {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+  .instagram-box {
+    width: 48%;
+    padding-top: 48%;
+  }
+
+  .instagram-box:nth-child(odd) {
+    margin-right: 4%;
+  }
+
+  .pagination {
+    margin-bottom: 50px;
+  }
 }
